# in_sc68k

aclocal68/: sc68_add_flag.m4  sc68_cc.m4  sc68_cppflags.m4  sc68_enable_package.m4  sc68_package.m4  sc68_readline.m4  sc68_threads.m4  sc68_with_module.m4
as68/: Makefile.am  NEWS  README  as68.c  as68.h  configure.ac  error.c  error.h  expression.c  opcode.c  word.c
contrib/: dump-average-spectrum.py  sinc-integral.py
desa68/: CMakeLists.txt  Makefile.am  README  cm_config.h.in  configure.ac  desa68.c  desa68.h  desa68.pc.in  desa68_private.h
file68/: config.h
file68/data68/Players/: blipp079.s  chipmon2.s  delicoso.s  deltamusic1.s  jamcracker10.s  jamcrackerpro.s  sidmon2.s  sidsound.s  soundfx.s  tao_tsd.s  tsd-jam.s  tsd1.s
file68/data68/Players/custom/: wrapper.s
file68/data68/Players/lib/: TosReloc.s
file68/sc68/: file68_err.h  file68_features.h  file68_msg.h
file68/src/: error68.c  file68.c  gzip68.c  init68.c  msg68.c  option68.c  registry68.c  rsc68.c  string68.c  timedb68.c  vfs68_file.c  vfs68_null.c  vfs68_z.c
info68/: Makefile.am  README  config.h  configure.ac  info68.c  info68.texi
libsc68/: config.h
libsc68/asm/: trapfunc.s  version.s.in
libsc68/dial68/winui/: Makefile.am  resource.h  resource.rc  winui_dlg.c  winui_dll.c  winui_rsc.c
libsc68/emu68/: emu68.c  inl68_systctrl.h  lines68.c
libsc68/io68/: paulaemul.c  paulaemul.h  ym_puls.c
libsc68/sc68/: trap68.h
libsc68/src/: api68.c  conf68.c
mksc68/: Makefile.am  README  configure.ac
mksc68/src/: mksc68.c  mksc68_cli.c  mksc68_cli.h  mksc68_cmd.c  mksc68_cmd.h  mksc68_cmd_extract.c  mksc68_cmd_gdb.c  mksc68_cmd_info.c  mksc68_cmd_load.c  mksc68_cmd_msg.c  mksc68_cmd_new.c  mksc68_cmd_play.c  mksc68_cmd_save.c  mksc68_cmd_tag.c  mksc68_cmd_time.c  mksc68_def.h  mksc68_dsk.c  mksc68_dsk.h  mksc68_eva.h  mksc68_gdb.c  mksc68_gdb.h  mksc68_msg.c  mksc68_msg.h  mksc68_oplen.h  mksc68_opt.c  mksc68_opt.h  mksc68_snd.c  mksc68_snd.h  mksc68_str.c  mksc68_str.h  mksc68_tag.c  mksc68_tag.h
sc68/: Makefile.am  README  config.h  configure.ac  sc68.c  sc68.texi
sc68-audacious/: Makefile.am  configure.ac  sc68-aud35.c  sc68-audacious.c
sc68-doc/: Makefile-doc.in  Makefile.am  NEWS  configure.ac  doc-filter.sh.in  gen-doxcfg.sh.in  sc68_doc.h
sc68-dshow/: README.txt  sc68-dshow.sln
sc68-dshow/baseclasses/: README.txt  baseclasses.vcxproj
sc68-dshow/sc68-splitter/: ds68_dbg.cpp  ds68_dbg.h  ds68_headers.h  ds68_inppin.cpp  ds68_inppin.h  ds68_mediacontent.cpp  ds68_mediaposition.cpp  ds68_outpin.cpp  ds68_outpin.h  ds68_prop.cpp  ds68_prop.h  ds68_reg.cpp  ds68_splitter.cpp  ds68_splitter.h  ds68_streamselect.cpp  ds68_trackinfo.cpp  ds68_trackinfo.h  ds68_types.h  ds68_utils.cpp  ds68_utils.h  ds68_vfs.cpp  ds68_vfs.h  regserv.bat  sc68-splitter.def  sc68-splitter.vcxproj
sc68-fb2k/: README  sc68-fb2k.sln
sc68-fb2k/foo_sc68/: cmenu_sc68.cpp  fb2k_sc68.cpp  foo_sc68.vcxproj  initquit_sc68.cpp  input_sc68.cpp  input_sc68.h  pref_sc68.cpp  stdafx.cpp  stdafx.h  vfs_sc68.cpp
sc68-gst/: Makefile.am  configure.ac  gstsc68.c  gstsc68.h  gstsc68_core.c  gstsc68_typefind.c
sc68-msvc/: README.txt  config_msvc.h  sc68.sln
sc68-msvc/file68/: config.h  file68.vcxproj
sc68-msvc/sc68/: config.h  sc68.vcxproj
sc68-msvc/unice68/: config.h  unice68.vcxproj
sc68-msvc/zlib/: README.txt  zconf.h  zlib-mt.lib  zlib-mtd.lib  zlib.h
sc68-nsi/: Makefile.am  configure.ac  sc68.nsi
sc68-vlc/: Makefile.am  Makefile.mingw  configure.ac  sc68-vlc-demux.c  sc68-vlc-vfs.c
sc68-winamp/: Makefile.in  README  cache.c  configdlg.c  configure.ac  dbg.c  dll.c  fileinfo.c  in_sc68.c  in_sc68k.def  sc68-winamp.sln  sc68-winamp.vcxproj  tracksel.c  transcoder.c  wasc68.h
sourcer68/: Makefile.am  NEWS  README  configure.ac  sourcer68.texi
sourcer68/src/: sourcer68.c  src68_adr.c  src68_adr.h  src68_def.h  src68_dis.c  src68_dis.h  src68_eva.c  src68_eva.h  src68_exe.c  src68_exe.h  src68_fmt.c  src68_fmt.h  src68_mbk.c  src68_mbk.h  src68_msg.c  src68_msg.h  src68_opt.c  src68_opt.h  src68_rel.c  src68_rel.h  src68_sec.c  src68_sec.h  src68_src.c  src68_src.h  src68_sym.c  src68_sym.h  src68_tos.c  src68_tos.h  src68_vec.c  src68_vec.h
tools/: Makefile  fix-copyright.sh  gen68.c  insttest68.c  oplen68.c  plot-average-spectrum.sh  svn-bootstrap.sh  svn-mrproper.sh  svn-setprops.sh  texinfo2man.c  unquar.c  vcversion.sh
unice68/: CMakeLists.txt  Makefile.am  config.h  configure.ac  unice68_pack.c
